--- a/GauntletGames.Domain/GauntletGames.Domain.csproj
+++ b/GauntletGames.Domain/GauntletGames.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Azure.Data.Tables" Version="12.8.0" />
+    </ItemGroup>
+
 </Project>
